[CHORE] Fix all-blogs alignment

--- a/app/styles/articles.scss
+++ b/app/styles/articles.scss
@@ -42,10 +42,12 @@
   /* background-color: #f0f0f0; */
   border: 1px solid $article-outline;
 }
-.article-main-heading {
+.m-30 {
+  margin-bottom: 30px;
+}
+.flex-center {
   display: flex;
   justify-content: center;
-  margin-bottom: 30px;
 }
 .empty-message {
   display: flex;
